Updated layout details

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ Colors used:
 Background Color (Mint): #c7d9c9;
 Font Color (Light Black): #0B0B0B
 */
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #CEDED1;
   font-family: 'Roboto', sans-serif;
@@ -98,4 +103,83 @@ a:active {
 .button.contact:hover {
   background-color: #2A6E2B;
   color: #ffffff;
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+}
+.social {
+  text-align: center;
+}
+.social a {
+  display: inline-block;
+  margin: 0 5px;
+}
+.social svg {
+  width: 50px;
+  height: auto;
+}
+
+/* Layout styling */
+
+.container {
+  padding: 0 15px;
+}
+
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
+
+#work .row { padding-bottom: 25px; }
+
+#hero h1 {
+  text-align: center; /* Centers text */
+}
+
+.logo {
+  max-width: 250px;
+}
+
+header {
+  background-color: #c7ccec;
+  text-align: center;
+  box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+  position: relative;
+  padding: 10px 0;
+}
+
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav > ul > li > a {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #4a4a4a;
+}
+
+nav {
+  display: inline-block;
+  width: 100%;
+}
+
+#hero {
+  background-color: #CEDED1;
+  padding: 20px 0;
+  display: inline-block;
+  width: 100%;
+}
+
+main {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #4a4a4a;
+  box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);  
 }
