--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,9 @@ footer {
 }
 
 #work .row { padding-bottom: 25px; }
+#work h2, #work h3 {
+  text-align: center;
+}
 
 #hero h1 {
   text-align: center; /* Centers text */
@@ -181,5 +184,5 @@ main {
   padding-top: 25px;
   padding-bottom: 25px;
   border-bottom: 1px solid #4a4a4a;
-  box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);  
+  box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
 }
