--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ Colors used:
 Background Color (Mint): #c7d9c9;
 Font Color (Light Black): #0B0B0B
 */
-
 * {
   box-sizing: border-box;
 }
@@ -11,7 +10,7 @@ Font Color (Light Black): #0B0B0B
 body {
   background-color: #CEDED1;
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
   line-height: 1.6;
   color: #0B0B0B;
@@ -53,6 +52,12 @@ img {
   height: auto;
 }
 
+svg {
+  width: 100%;
+max-width: 100%;
+height: auto;
+}
+
 a {
   color: #40356E;
   font-weight: bold;
@@ -75,21 +80,17 @@ a:active {
 
 .button {
   display: inline-block;
-  /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
   background-color: #c7ccec;
   color: #ffffff;
-  /* needed to override the default link color */
   font-weight: 500;
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid #42416a;
-  /* width of the border, type, color */
   transition: 0.2s opacity;
 }
 
 .button:hover {
   opacity: 0.8;
-  /* Reduces the opacity of the button to 80% */
   text-decoration: none;
 }
 
@@ -109,35 +110,47 @@ footer {
   text-align: center;
   padding: 10px;
 }
+
 .social {
   text-align: center;
 }
+
 .social a {
   display: inline-block;
   margin: 0 5px;
 }
+
 .social svg {
   width: 50px;
   height: auto;
 }
 
 /* Layout styling */
-
 .container {
   padding: 0 15px;
 }
 
 .row {
-  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+  margin: 25px 0;
+  /* 25px top and bottom, 0 left and right */
 }
 
-#work .row { padding-bottom: 25px; }
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+#work .row {
+  padding-bottom: 25px;
+}
+
 #work h2, #work h3 {
   text-align: center;
 }
 
 #hero h1 {
-  text-align: center; /* Centers text */
+  text-align: center;
 }
 
 .logo {
@@ -152,16 +165,16 @@ header {
   padding: 10px 0;
 }
 
-nav > ul {
+nav>ul {
   list-style-type: none;
   padding: 0;
 }
 
-nav > ul > li {
+nav>ul>li {
   display: inline-block;
 }
 
-nav > ul > li > a {
+nav>ul>li>a {
   padding: 0 15px;
   text-transform: uppercase;
   font-weight: 700;
@@ -180,9 +193,91 @@ nav {
   width: 100%;
 }
 
+#hero span {
+  display: block;
+}
+
 main {
   padding-top: 25px;
   padding-bottom: 25px;
   border-bottom: 1px solid #4a4a4a;
   box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
 }
+
+[class*="col-"] {
+  padding-left: 10px;
+  padding-right: 10px;
+  float: left;
+}
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+.cloud-front {
+  animation: 25s cloud-move infinite alternate linear;
+}
+
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+
+.cloud-back {
+  animation: 29s cloud-move-reverse infinite alternate linear;
+}
+
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
+}
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+  .col-lg-7 {
+    width: 58.33%;
+  }
+
+  .col-lg-5 {
+    width: 41.66%;
+  }
+
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {}
