--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,15 @@ img {
   height: auto;
 }
 
+iframe {
+  display: block;
+  margin: 0 auto;
+}
+
 svg {
   width: 100%;
-max-width: 100%;
-height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 a {
@@ -86,7 +91,7 @@ a:active {
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid #42416a;
-  transition: 0.2s opacity;
+  transition: all .2s ease;
 }
 
 .button:hover {
@@ -157,6 +162,10 @@ footer {
   max-width: 250px;
 }
 
+h2 {
+  text-align: center;
+}
+
 header {
   background-color: #c7ccec;
   text-align: center;
@@ -211,9 +220,17 @@ main {
 }
 
 @keyframes color-change {
-  0% {fill: #edc655;}
-  50% {fill: #fcffad;}
-  100% {fill: #f76414;}
+  0% {
+    fill: #edc655;
+  }
+
+  50% {
+    fill: #fcffad;
+  }
+
+  100% {
+    fill: #f76414;
+  }
 }
 
 .sun {
@@ -221,8 +238,13 @@ main {
 }
 
 @keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
 }
 
 .cloud-front {
@@ -230,8 +252,13 @@ main {
 }
 
 @keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
+  from {
+    transform: translate(446px, 48px);
+  }
+
+  to {
+    transform: translate(100px, 48px);
+  }
 }
 
 .cloud-back {
